fix scrollup arrow position on mobile

--- a/sass/blocks/_pageup.scss
+++ b/sass/blocks/_pageup.scss
@@ -8,4 +8,9 @@
   img {
     width: 100%;
   }
+
+  @media screen and (max-width: 992px) {
+    right: 10px;
+    bottom: 20px;
+  }
 }
